:sparkles: feat: sounds and equalizer's html structure

--- a/index.html
+++ b/index.html
@@ -84,15 +84,24 @@
           <div class="bar"></div>
           <div class="bar"></div>
           <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
         </div>
       </div>
       <div class="div9">lat</div>
       <div class="div10">bottom</div>
       <div class="div11">
-        <div id="current-time"></div>
+        <div id="current-time">0:00</div>
         <button id="play"><img src="./assets/icons/play.svg" alt="Play input" width="20" /></button>
-        <button id="pause"><img src="./assets/icons/pause.svg" alt="Pause input" width="20" /></button>
-        <div id="audio-length"></div>
+        <button id="pause" class="hidden"><img src="./assets/icons/pause.svg" alt="Pause input" width="20" /></button>
+        <button id="stop"><img src="./assets/icons/stop.svg" alt="Pause input" width="20" /></button>
+        <div id="audio-length">0:00</div>
       </div>
     </div>
   </body>
