:sparkles: feat: Music wave

--- a/index.html
+++ b/index.html
@@ -71,10 +71,9 @@
       </main>
       <div class="div3">middle</div>
       <div class="div4">left</div>
-      <div class="div5"><div id="progress-bar"></div></div>
-      <div class="div6">
+      <div class="div5">
+        <div id="progress-bar"></div>
         <div class="wave">
-          <div class="wave-progress"></div>
           <div class="wave-bar"></div>
           <div class="wave-bar"></div>
           <div class="wave-bar"></div>
@@ -189,6 +188,7 @@
           <div class="wave-bar"></div>
         </div>
       </div>
+      <div class="div6"></div>
       <div class="div7">right</div>
       <div class="div8">
         <div id="equalizer">
@@ -229,11 +229,22 @@
       <div class="div9">lat</div>
       <div class="div10">bottom</div>
       <div class="div11">
-        <div id="current-time">0:00</div>
-        <button id="play"><img src="./assets/icons/play.svg" alt="Play input" width="20" /></button>
-        <button id="pause" class="hidden"><img src="./assets/icons/pause.svg" alt="Pause input" width="20" /></button>
-        <button id="stop"><img src="./assets/icons/stop.svg" alt="Pause input" width="20" /></button>
-        <div id="audio-length">0:00</div>
+        <div class="audio-buttons">
+          <button id="play"><img src="./assets/icons/play.svg" alt="Play input" width="20" /></button>
+          <button id="pause" class="hidden"><img src="./assets/icons/pause.svg" alt="Pause input" width="20" /></button>
+          <button id="stop"><img src="./assets/icons/stop.svg" alt="Pause input" width="20" /></button>
+          <!-- <button id="stop"><img src="./assets/icons/stop.svg" alt="Pause input" width="20" /></button>
+          <button id="stop"><img src="./assets/icons/stop.svg" alt="Pause input" width="20" /></button>
+          <button id="stop"><img src="./assets/icons/stop.svg" alt="Pause input" width="20" /></button>
+          <button id="stop"><img src="./assets/icons/stop.svg" alt="Pause input" width="20" /></button> -->
+        </div>
+        <div class="audio-timer">
+          <div id="current-time">0:00</div>
+          <div id="audio-length">0:00</div>
+        </div>
+        <div>
+          <span style="padding-right: 150px;">footer</span>
+        </div>
       </div>
     </div>
   </body>
